# elastic-ai.creator

./: .devenv.flake.nix  .editorconfig  .envrc  .git_template  .gitignore  .gitignore.swp  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE  README.md  TODO.md  architecture.puml  changelog_template  cog.toml  commitlint.config.js  conftest.py  constraints-ci.txt  devenv.local.yaml  devenv.nix  devenv.yaml  dockerfile  import_contract.py  makefile  package-lock.json  package.json  paths.py  pyproject.toml  requirements.txt  secretspec.toml  tach.toml  test_guidelines.md  test_log.json  testbenches_report.xml  ty_config_for_ci.toml  vhdl_ls.toml  work-obj08.cf  (+1 more)
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  user_story.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.yml
.github/actions/: setup_test_environment.yml
.github/workflows/: all_tests.yml  beautify.yml  checks.yml  coverage.yml  docs.yml  force-publish.yml  force_publish.yml  integration_tests.yml  main.yml  plugin-vhdl-testbenches.yml  pre-commit.yml  publish.yml  publish_test.yml  python-publish.yml  release.yaml  run_tests.yml  semantic-release.yml  test-and-publish-to-testpypi.yml  test-and-publish.yml  unit_tests.yml
.husky/: commit-msg
build_sim/: test_vhdl_with_defines_with_params.None  top-obj93.cf
build_test/: TestHardSigmoid_6_2.json  TestHardSigmoid_6_2.vhd  TestHardTanh_6_2.json  TestHardTanh_6_2.vhd  TestPReLU_10_9_64.json  TestPReLU_10_9_64.vhd  TestPReLU_6_4_32.json  TestPReLU_6_4_32.vhd  TestPReLU_8_4_32.json  TestPReLU_8_4_32.vhd  TestSiLUAdaptible_10_9_64.json  TestSiLUAdaptible_10_9_64.vhd  TestSiLUAdaptible_6_4_32.vhd  TestSiLUAdaptible_8_4_32.vhd  TestSiLU_10_9_64.vhd  TestSiLU_6_4_32.json  TestSiLU_6_4_32.vhd  TestSiLU_8_4_32.json  TestSiLU_8_4_32.vhd  TestSigmoid_10_9_64.json  TestSigmoid_10_9_64.vhd  TestSigmoid_6_4_32.json  TestSigmoid_6_4_32.vhd  TestSigmoid_8_4_32.json  TestSigmoid_8_4_32.vhd  TestTanh_10_9_64.json  TestTanh_10_9_64.vhd  TestTanh_6_4_32.json  TestTanh_6_4_32.vhd  TestTanh_8_4_32.json  TestTanh_8_4_32.vhd
devenv_modules/ghdl/: Readme.adoc  devenv.nix
devenv_modules/hdl/: README.md  devenv.nix  ghdl.nix
devenv_modules/torch_backend/: README.md  devenv.nix
docs/: antora-playbook.yml  antora.yml  conf.py  contribution.md  hardware_testing_framework.md  hdl_generator.md  index.rst  ir.md  ir2vhdl.md  quantized_grads.md  single_page.html  testing.md  torch2ir.md  utils.adoc
docs/_static/: ir_lowering.pic
docs/api/: core.md  nn.md  plugins.md  testing.md
docs/apidocs/: index.rst
docs/creator/: index.md  ir.md  ir2vhdl.md  pipelined_hw_components.md  plugin-system.md  quantized_grads.md  readme.md  skeleton.md  system_integrations.md  testing.md  torch2ir.md
docs/javascript/: mathjax.js  wavedrom_loader.js
docs/plugins/: combinatorial.md  index.md  lutron.md  quantized_grads.md  shift_register.md  skeleton.md  sliding_window.md  time_multiplexed_sequential.md
docs/source/: conf.py
elasticai/creator/: QRigL.py  block_factory.py  blocks.py  breakdown.py  constraints.py  dataflow.py  derive_data_sets.py  function_dispatch.py  function_utils.py  functional.py  generate_base_template.py  generate_template.py  hdl_ir.py  hw_accelerator_meta.py  hw_function_id.py  in_memory_path.py  input_domains.py  io_table.py  io_table_builder.py  ir2vhdl.py  layers.py  lowering_pass_plugin.py  masks.py  metaprogramming.py  model_reporter.py  on_disk_path.py  onnx.py  onnx_export.py  plugin.py  plugin_loader.py  precomputation.py  precomputation_rationale.md  protocols.py  representations.py  resource_utils.py  tags.py  tags_utils.py  template.py  translation_pass_plugin.py  vhdl_template.py
elasticai/generator/: general_strings.py  vhd_strings.py  (+21 more)
examples/: cable_length.csv  cable_length_dataset.py  minimal_example_FPGA_with_MiddlewareV2.py  multi_linear.py  multi_linear_inference.ipynb
ir_spec/: conv1d.schema.json
plugins/lutron_filter/: README.md  pyproject.toml
plugins/lutron_filter/src/elasticai/creator_plugins/lutron_filter/: __init__.py  ir_analysis.py  torch2ir.py  torch_analysis.py
plugins/lutron_filter/src/elasticai/creator_plugins/lutron_filter/precompute/: int_encoding_lutron_convolution.py  lutron_filter.py  lutron_module_protocol.py
plugins/lutron_filter/src/elasticai/creator_plugins/lutron_filter/rules/: __init__.py  _ir.py  _precomputation.py  _precomputation_impls.py  _remove_redundant_layers.py  _reorder.py  _shape_inference.py  _split.py  binarize_activations.py  precomputation_impls.py  reorder.py  split.py
plugins/lutron_filter/src/elasticai/creator_plugins/lutron_filter/splitting_filters/: af_split_filters.py  graph_utils.py  plot_utils.py  split_filter.py
plugins/lutron_filter/src/elasticai/creator_plugins/lutron_filter/tests/integration/: input_tensor_generation_test.py  split_convs_test.py  tensor_conversion_test.py
plugins/lutron_filter/src/elasticai/creator_plugins/lutron_filter/tests/unit/: ir_facade_test.py  precompute_rule_test.py  replace_prelu_with_binarize_test.py  shape_inference_test.py
plugins/lutron_filter/tests/integration/: input_tensor_generation_test.py  split_convs_test.py  tensor_conversion_test.py  twos_complement_wrapper_test.py
plugins/lutron_filter/tests/unit/: ir_facade_test.py  precompute_rule_test.py  remove_redundant_layers_test.py  reorder_maxpool_bnorm_test.py  replace_prelu_with_binarize_test.py  shape_inference_test.py
presentation/: presentation.md
stuff/: binary_classification.py  classification_with_bn.py  regression_with_bn.py  regression_with_tanh.py  translate_batch_normed_linear.py  translate_mlp.py
tests/: code_utilities_for_testing.py  design_file_structure.py  design_file_structure_test.py  temporary_file_structure_test.py  test_autowiring.py  test_code_generation.py  test_dataflow_node.py  test_template_generator.py  test_templates.py  test_text_parsing.py  test_vhdfilereader.py  trainable_test.py
utils/: autobuild_binfile_vivado2021.1.sh  hw_test_runner.py
(+3323 files in other folders)
