[project]
name = "elasticai.creator"
dynamic = ["version"]
description = "Design, train and compile neural networks optimized specifically for FPGAs."
readme = "README.md"
authors = [{ name = "Department Embedded Systems - University Duisburg Essen" }]
maintainers = [{ name = "Lukas Einhaus", email = "lukas.einhaus@uni-due.de" }]
requires-python = ">=3.11"
dependencies = [
    "torch>=1.11",
    "numpy>=1.23.0",
    "tomlkit>=0.13.2",
    "click>=8.1.7",
]



[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pysciidoc>=0.3.3",
    "tach>=0.23.0",
]
release = ["git-cliff>=2.7.0"]
testing = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.9",
    "vunit-hdl>=5.0.0.dev5",
]
utils = ["rust-just>=1.38.0"]
versioning = ["towncrier>=24.8.0"]
lint = ["mypy>=1.13.0", "ruff>=0.9.0"]
lsp = ["pylsp-mypy>=0.6.9", "pylsp-rope>=0.1.17", "python-lsp-server>=1.12.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elasticai"]
exclude = [
     "*_test.py", 
     "test_*.py",
     "elasticai/creator_plugins/*/tests",
     "elasticai/creator_plugins/*/examples",
     "elasticai/creator_plugins/*/docs",
]
 

[tool.hatch.version]
source = "vcs"


[tool.uv]
default-groups = ["utils", "testing", "lint", "dev"]


[tool.uv.sources]
elasticai-runtime-env5 = { git = "https://github.com/es-ude/elastic-ai.runtime.enV5.git", rev = "a9bc18749b1c1666828453a47c9c37f6f0aa2d61" }


[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "simulation: possibly slow running integration tests including hw simulation",
]
testpaths = ["elasticai/creator/", "tests", "elasticai/creator_plugins"]
python_files = ["*_test.py", "test_*.py"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
omit = [
    "elasticai/creator/examples/*py",
    "elasticai/creator/tests/*py",
    "elasticai/creator/*Tests/*py",
    "elasticai/creator/**/*_test.py",
    "elasticai/**/__init__.py",
    "tests/*py",
    "elasticai/creator/utils/_console_out.py", # not testable
    "elasticai/creator/utils/_run.py",         # not testable
]
source = ["elasticai/creator", "elasticai/creator_plugins"]
command_line = "-m pytest -m 'not simulation'"


[tool.ruff]
include = [
    "pyproject.toml",
    "elasticai/**/*.py",
    "elasticai/**/*.pyi",
    "elasticai/**/*.py",
    "tests/**/*.py"
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".devenv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I"
]
ignore = [
    "D101",
    "D102",
    "E741", # ambiguous variable names
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


