[project]
name = "elasticai.creator"
dynamic = ["version"]
description = "Design, train and compile neural networks optimized specifically for FPGAs."
readme = "README.md"
authors = [{ name = "Department Intelligent Embedded Systems - University Duisburg Essen" }]
maintainers = [{ name = "Lukas Einhaus", email = "lukas.einhaus@uni-due.de" }]
requires-python = ">=3.11"
dependencies = [
    "torch>=1.11",
    "numpy>=1.23.0",
    "tomlkit>=0.13.2",
    "click>=8.1.7",
    "pyserial>=3.4",
    "cocotb>=1.9.2",
]


[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "hatch-vcs>=0.4.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "tach>=0.23.0",
]
docs = [
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
    "sphinx-autoapi>=3.4.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-prompt>=1.9.0",
    "sphinxcontrib-plantuml>=0.30",
    "sphinxcontrib-wavedrom>=3.0.4",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "linkify>=1.4",
    "linkify-it-py>=2.0.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinxext-opengraph>=0.9.1",
    "sphinxcontrib-kroki>=1.3.0",
    "zundler>=0.2.2",
    "sphinx-book-theme>=1.1.3",
    "sphinx-togglebutton>=0.3.2",
    "htmlark[http,parsers]>=1.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-design>=0.6.1",
]
release = ["git-cliff>=2.7.0"]
testing = [
    "pytest>=8.3.4",
    "hypothesis>=6.124.7",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.9",
    "vunit-hdl>=5.0.0.dev5",
    "elasticai-runtime-env5",
]
utils = ["rust-just>=1.38.0"]
versioning = ["towncrier>=24.8.0"]
lint = ["mypy>=1.13.0", "ruff>=0.9.0"]
lsp = [
    "esbonio>=0.16.5",
    "pylsp-mypy>=0.6.9",
    "pylsp-rope>=0.1.17",
    "python-lsp-server>=1.12.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elasticai"]
exclude = [
    "*_test.py",
    "test_*.py",
    "elasticai/creator_plugins/*/tests",
    "elasticai/creator_plugins/*/examples",
    "elasticai/creator_plugins/*/docs",
]


[tool.hatch.version]
source = "vcs"


[tool.uv]
default-groups = ["utils", "testing", "lint", "dev", "docs"]


[tool.uv.sources]
elasticai-runtime-env5 = { git = "https://github.com/es-ude/elastic-ai.runtime.enV5.git", rev = "a9bc18749b1c1666828453a47c9c37f6f0aa2d61" }
sphinxcontrib-wavedrom = { git = "https://github.com/glencoe/sphinx-wavedrom.git", rev = "hotfix_html_only_version" }
vunit-hdl = {url= "https://github.com/glencoe/vunit/releases/download/5.0.0.dev7-no-tests/vunit_hdl-5.0.0.dev7.tar.gz"}


[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "simulation: possibly slow running integration tests including hw simulation, depends on ghdl being present",
    "slow: a slow test that you would not run in tdd cycle",
    "hardware: slow running system tests using the hardware deployment on real targets"
]
testpaths = ["elasticai/creator/", "tests", "elasticai/creator_plugins"]
python_files = ["*_test.py", "test_*.py"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
omit = [
    "elasticai/creator/examples/*py",
    "elasticai/creator/tests/*py",
    "elasticai/creator/*Tests/*py",
    "elasticai/creator/**/*_test.py",
    "elasticai/**/__init__.py",
    "tests/*py",
    "elasticai/creator/utils/_console_out.py", # not testable
    "elasticai/creator/utils/_run.py",         # not testable
]
source = ["elasticai/creator", "elasticai/creator_plugins"]
command_line = "-m pytest -m 'not simulation and not slow and not hardware'"


[tool.ruff]
include = [
    "pyproject.toml",
    "elasticai/**/*.py",
    "elasticai/**/*.pyi",
    "elasticai/**/*.py",
    "tests/**/*.py",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".devenv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "D101",
    "D102",
    "E741", # ambiguous variable names
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.mypy]
ignore_errors = false

[[tool.mypy.overrides]]
## Ignore errors in the following modules until we fixed type hints
module = [
    "elasticai.creator.nn.fixed_point.lstm.*",
    "elasticai.creator.nn.fixed_point.conv1d.*",
    "elasticai.creator.nn.fixed_point.linear.*",
    "elasticai.creator.nn.fixed_point.number_converter.*",
    "elasticai.creator.nn.quantized_grads.*",
    "elasticai.creator.base_modules.conv1d",
    "elasticai.creator.base_modules.conv2d",
    "elasticai.creator.base_modules.linear",
]
ignore_errors = true


[tool.git-cliff.changelog]
body = """
{% if version %}\
    ## {{ version | trim_start_matches(pat="v") }} - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## Unreleased
{% endif %}\
{% if previous %}\
    {% if previous.commit_id and commit_id %}
        [{{ previous.commit_id | truncate(length=7, end="") }}]({{ previous.commit_id }})...\
            [{{ commit_id | truncate(length=7, end="") }}]({{ commit_id }})
    {% endif %}\
{% endif %}\
{% for group, commits in commits | unique(attribute="message")  | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | split(pat="\n") | first | upper_first | trim }} ([{{ commit.id | truncate(length=7, end="") }}]( $REPO/commit/{{ commit.id }})) - {{ commit.author }}\
          {% for footer in commit.footers -%}
            {% if footer.token == "BREAKING CHANGE" %}\
            , {{ footer.token }}{{ footer.separator }}{{ footer.value }}\
            {% endif %}\
          {% endfor %}\
    {% endfor %}
{% endfor %}\n
"""

postprocessors = [
    # Replace the placeholder `<REPO>` with a URL.
    { pattern = '\$REPO', replace = "https://github.com/es-ude/elastic-ai.creator" }, # replace repository URL
]


[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
commit_preprocessors = [
    { pattern = "\\(#([0-9]+)\\)", replace = "([#${1}](https://github.com/es-ude/elastic-ai.creator/issues/${1}))" },                            # replace #NR by link to issue
    { pattern = "([ \\n])(([a-f0-9]{7})[a-f0-9]*)", replace = "${1}commit # [${3}](https://github.com/es-ude/elastic-ai.creator/commit/${2})" }, # replace commit hash by link to commit
]
commit_parsers = [
    { message = "^wip", skip = true }, # ignore commits of type wip
]

[tool.git-cliff.bump]
breaking_always_bump_major = false
features_always_bump_minor = true
